force-app/main/default/objects/Volunteer_Job__c.object
<CustomObject>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <label>Areas of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Business and Economy</fullName>
                </value>
                <value>
                    <fullName>Career Development and Planning Opportunities</fullName>
                </value>
                <value>
                    <fullName>Culture, Recreation and Sport</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering and Science</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurship, Start Ups &amp; Innovation</fullName>
                </value>
                <value>
                    <fullName>Indigenous Communities and Culture</fullName>
                </value>
                <value>
                    <fullName>Law, Politics and Society</fullName>
                </value>
                <value>
                    <fullName>Medicine and Health (includes Mental Health and Aging)</fullName>
                </value>
                <value>
                    <fullName>Sustainable Development and Environment</fullName>
                </value>
                <value>
                    <fullName>Technology, AI &amp; Data Science</fullName>
                </value>
                <value>
                    <fullName>Arts, Design &amp; Performance</fullName>
                    <isActive>false</isActive>
                    <label>Arts, Design &amp; Performance</label>
                </value>
                <value>
                    <fullName>Business</fullName>
                    <isActive>false</isActive>
                    <label>Business</label>
                </value>
                <value>
                    <fullName>Communications &amp; Media</fullName>
                    <isActive>false</isActive>
                    <label>Communications &amp; Media</label>
                </value>
                <value>
                    <fullName>Entrepreneurship</fullName>
                    <isActive>false</isActive>
                    <label>Entrepreneurship</label>
                </value>
                <value>
                    <fullName>Environment</fullName>
                    <isActive>false</isActive>
                    <label>Environment</label>
                </value>
                <value>
                    <fullName>Health &amp; Wellness</fullName>
                    <isActive>false</isActive>
                    <label>Health &amp; Wellness</label>
                </value>
                <value>
                    <fullName>Inclusion and Diversity</fullName>
                    <isActive>false</isActive>
                    <label>Inclusion and Diversity</label>
                </value>
                <value>
                    <fullName>Issues in the law</fullName>
                    <isActive>false</isActive>
                    <label>Issues in the law</label>
                </value>
                <value>
                    <fullName>Performing Arts</fullName>
                    <isActive>false</isActive>
                    <label>Performing Arts</label>
                </value>
                <value>
                    <fullName>Philanthropy</fullName>
                    <isActive>false</isActive>
                    <label>Philanthropy</label>
                </value>
                <value>
                    <fullName>Public, Social &amp; Human Services</fullName>
                    <isActive>false</isActive>
                    <label>Public, Social &amp; Human Services</label>
                </value>
                <value>
                    <fullName>Research</fullName>
                    <isActive>false</isActive>
                    <label>Research</label>
                </value>
                <value>
                    <fullName>Science, Technology, Engineering &amp; Mathematics</fullName>
                    <isActive>false</isActive>
                    <label>Science, Technology, Engineering &amp; Mathematics</label>
                </value>
                <value>
                    <fullName>Sports</fullName>
                    <isActive>false</isActive>
                    <label>Sports</label>
                </value>
                <value>
                    <fullName>Sustainability, Environmental &amp; Natural Resources</fullName>
                    <isActive>false</isActive>
                    <label>Sustainability, Environmental &amp; Natural Resources</label>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                    <isActive>false</isActive>
                    <label>Talent Management</label>
                </value>
                <value>
                    <fullName>Visual Arts</fullName>
                    <isActive>false</isActive>
                    <label>Visual Arts</label>
                </value>
                <value>
                    <fullName>Women&apos;s Rights</fullName>
                    <isActive>false</isActive>
                    <label>Women&apos;s Rights</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_Requirements__c</fullName>
        <label>Background Requirements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Working with children check</fullName>
                </value>
                <value>
                    <fullName>Due diligence check</fullName>
                </value>
                <value>
                    <fullName>Reference check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Volunteer Jobs</relationshipLabel>
        <relationshipName>Volunteer_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Volunteer Jobs</relationshipLabel>
        <relationshipName>Volunteer_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Display_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if this Volunteer Job should be included in the Available Volunteer Jobs Sites page.</inlineHelpText>
        <label>Display on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Volunteer Job End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_Hours__c</fullName>
        <inlineHelpText>Estimated commitment</inlineHelpText>
        <label>Estimated Number of Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Signup_Url__c</fullName>
        <description>If provided, the VolunteersJobListingFS page will redirect to this website when the user clicks on the Sign Up link on the page.  This allows you to advertise jobs that one must register for on another web site.</description>
        <inlineHelpText>If provided, the VolunteersJobListingFS page will redirect to this website when the user clicks on the Sign Up link on the page.  This allows you to advertise jobs that one must register for on another web site.</inlineHelpText>
        <label>External Signup Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Externally_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if this Volunteer Job should be included in the Get Involved Alumni Portal page.</inlineHelpText>
        <label>Externally Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Shift__c</fullName>
        <label>First Shift</label>
        <summarizedField>Volunteer_Shift__c.Start_Date_Time__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Footer_Content__c</fullName>
        <label>Footer Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_Content__c</fullName>
        <label>Header Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_Image__c</fullName>
        <label>Header Image</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_Image_from_URL__c</fullName>
        <label>Header Image from URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Volunteer Job is no longer active, and it won&apos;t be included in the Volunteers Report Hours Sites page.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Information__c</fullName>
        <inlineHelpText>Put in any additional details, like driving directions or a URL to a map, in this field, and it will be included in automated email reminders.</inlineHelpText>
        <label>Location Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <label>Location Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip_Postal_Code__c</fullName>
        <label>Location Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager/Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volunteer_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed.  Hours with other status values are not included.</inlineHelpText>
        <label>Number of Completed Hours</label>
        <summarizedField>Volunteer_Hours__c.Total_Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Shifts__c</fullName>
        <label>Number of Shifts</label>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers_Still_Needed__c</fullName>
        <label># of Volunteers Still Needed</label>
        <summarizedField>Volunteer_Shift__c.Number_of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <inlineHelpText>The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
        <label>Number of Volunteers</label>
        <summarizedField>Volunteer_Hours__c.Number_of_Volunteers__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ongoing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_End_Date__c</fullName>
        <formula>End_Date__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommend_Type_1__c</fullName>
        <label>Recommend Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Content_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Type_2__c</fullName>
        <label>Recommend Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Content_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Type_3__c</fullName>
        <label>Recommend Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Content_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills_Needed__c</fullName>
        <inlineHelpText>the skills the volunteer should have to do this job</inlineHelpText>
        <label>Skills Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Administration &amp; Office Support</fullName>
                </value>
                <value>
                    <fullName>Advertising, Arts &amp; Media</fullName>
                </value>
                <value>
                    <fullName>Banking &amp; Financial Services</fullName>
                </value>
                <value>
                    <fullName>Call Centre &amp; Customer Service</fullName>
                </value>
                <value>
                    <fullName>CEO &amp; General Management</fullName>
                </value>
                <value>
                    <fullName>Community Services &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting &amp; Strategy</fullName>
                </value>
                <value>
                    <fullName>Design &amp; Architecture</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Farming, Animals &amp; Conservation</fullName>
                </value>
                <value>
                    <fullName>Government &amp; Defence</fullName>
                </value>
                <value>
                    <fullName>Healthcare &amp; Medical</fullName>
                </value>
                <value>
                    <fullName>Hospitality &amp; Tourism</fullName>
                </value>
                <value>
                    <fullName>Human Resources &amp; Recruitment</fullName>
                </value>
                <value>
                    <fullName>Information &amp; Communication Technology</fullName>
                </value>
                <value>
                    <fullName>Insurance &amp; Superannuation</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Manufacturing, Transport &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Mining, Resources &amp; Energy</fullName>
                </value>
                <value>
                    <fullName>Real Estate &amp; Property</fullName>
                </value>
                <value>
                    <fullName>Retail &amp; Consumer Products</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Science &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Self Employment</fullName>
                </value>
                <value>
                    <fullName>Sport &amp; Recreation</fullName>
                </value>
                <value>
                    <fullName>Trades &amp; Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Volunteer Job Start Date</description>
        <inlineHelpText>Volunteer Job Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Jobs (Supervisor)</relationshipLabel>
        <relationshipName>Volunteer_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title_URL__c</fullName>
        <label>Title URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Volunteer_Type__c</fullName>
        <label>Volunteer Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Event Organiser</fullName>
                </value>
                <value>
                    <fullName>Feedback to Monash</fullName>
                </value>
                <value>
                    <fullName>General Interest</fullName>
                </value>
                <value>
                    <fullName>Mentor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Share Story</fullName>
                </value>
                <value>
                    <fullName>Social moderator</fullName>
                </value>
                <value>
                    <fullName>Speaker - Advanced</fullName>
                </value>
                <value>
                    <fullName>Speaker - Beginner</fullName>
                </value>
                <value>
                    <fullName>Speaker - Intermediate</fullName>
                </value>
                <value>
                    <fullName>Student Host</fullName>
                </value>
                <value>
                    <fullName>Thought Leadership</fullName>
                </value>
                <value>
                    <fullName>Mentee</fullName>
                    <isActive>false</isActive>
                    <label>Mentee</label>
                </value>
                <value>
                    <fullName>Student Participant</fullName>
                    <isActive>false</isActive>
                    <label>Student Participant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone to use when displaying Shift times on Sites pages.   You only need to set this if you want to override both the Time Zone set on the Site Guest User profile, and the Time Zone set on the Volunteers campaign.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimat</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Yekaterinburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Volunteers_Needed__c</fullName>
        <label># of Volunteers Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Volunteers_Still_Needed__c</fullName>
        <formula>of_Volunteers_Needed__c -  Number_of_Volunteers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Volunteers Still Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Volunteer Job</label>
    <listViews>
        <fullName>All_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Volunteer_Type__c</columns>
        <columns>Number_of_Volunteers__c</columns>
        <columns>Number_of_Volunteers_Still_Needed__c</columns>
        <columns>Number_of_Completed_Hours__c</columns>
        <columns>Ongoing__c</columns>
        <columns>Display_on_Website__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Jobs</label>
    </listViews>
    <listViews>
        <fullName>Available_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Externally_Visible__c</columns>
        <columns>Number_of_Volunteers_Still_Needed__c</columns>
        <columns>Number_of_Completed_Hours__c</columns>
        <columns>Ongoing__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Available Jobs</label>
    </listViews>
    <listViews>
        <fullName>Jobs_Feedback_to_Monash</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Number_of_Volunteers__c</columns>
        <columns>Number_of_Volunteers_Still_Needed__c</columns>
        <columns>Number_of_Completed_Hours__c</columns>
        <columns>Ongoing__c</columns>
        <columns>Display_on_Website__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Type__c</field>
            <operation>equals</operation>
            <value>Feedback to Monash</value>
        </filters>
        <label>Jobs - Feedback to Monash</label>
    </listViews>
    <listViews>
        <fullName>Jobs_Share_Story</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Number_of_Volunteers__c</columns>
        <columns>Number_of_Volunteers_Still_Needed__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Ongoing__c</columns>
        <columns>Display_on_Website__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Type__c</field>
            <operation>equals</operation>
            <value>Share Story</value>
        </filters>
        <label>Jobs - Share Story</label>
    </listViews>
    <listViews>
        <fullName>Jobs_Speaker_beginner</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Number_of_Volunteers__c</columns>
        <columns>Number_of_Volunteers_Still_Needed__c</columns>
        <columns>Number_of_Completed_Hours__c</columns>
        <columns>Ongoing__c</columns>
        <columns>Display_on_Website__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Type__c</field>
            <operation>equals</operation>
            <value>Speaker - Beginner</value>
        </filters>
        <label>Jobs - Speaker beginner</label>
    </listViews>
    <listViews>
        <fullName>Ongoing_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Number_of_Volunteers_Still_Needed__c</columns>
        <columns>Number_of_Completed_Hours__c</columns>
        <columns>Ongoing__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ongoing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Ongoing Jobs</label>
    </listViews>
    <nameField>
        <label>Volunteer Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>